# gnome-shell-extension-appindicator

./: .eslintrc.yml  .gitignore  AUTHORS.md  Dockerfile  Makefile  README.md  appIndicator.js  config.js.sh  convenience.js  dashIndicatorIcon.js  dbusMenu.js  dbusProxy.js  docker-compose.yml  extension.js  iconCache.js  indicatorMessageSource.js  indicatorStatusIcon.js  interfaces.js  meson.build  meson_options.txt  metadata.json  pixmapArgbToRgba.js  pixmapLoader.js  pixmapsUtils.js  prefs.js  promiseUtils.js  q.js  settings.js  settingsManager.js  statusNotifierDispatcher.js  statusNotifierWatcher.js  topicons.js  trayIconsManager.js  util.js
.github/workflows/: defender-for-devops.yml  dist-check-and-ego-upload.yaml  dist-check.yaml  eslint.yaml  ossar.yml
debian/: changelog  control  copyright  gbp.conf  install  rules  watch
debian/patches/: 01-Add_3.28_support.patch  02-Fix_metadata.patch  Register-the-StatusNotifierWatcher-as-soon-as-possible.patch  appIndicator-Connect-to-scroll-event-signal.patch  appIndicator-Fix-reduce-padding-for-some-icons.patch  appIndicator-Remove-unneeded-padding.patch  indicatorStatusIcon-Handle-scroll-events-on-label-too-not.patch  metadata-use-appindicator-namespace-and-naming.patch  series  statusNotifierItem-Emit-signals-about-removed-items-on-de.patch  statusNotifierWatcher-Emit-the-uniqueId-when-emitting-Un-.patch  util-Properly-call-logger-static-method.patch
indicator-test-tool/: ksni.py  testTool.js
interfaces-xml/: DBusMenu.xml  Properties.xml  StatusNotifierItem.xml  StatusNotifierWatcher.xml
lint/: eslintrc-gjs.yml  eslintrc-legacy.yml
locale/: AppIndicatorExtension.pot  LINGUAS  POTFILES.in  ar.po  bg.po  cs.po  de.po  es.po  fr.po  hu.po  it.po  ja.po  ka.po  ko.po  meson.build  nl.po  oc.po  pl.po  pt_BR.po  ru.po  sk.po  sr.po  sr@latin.po  ta.po  tr.po  uk.po  zh_CN.po  zh_TW.po
locale/de/LC_MESSAGES/: AppIndicator-Support.mo  AppIndicatorExtension.po
locale/fr/LC_MESSAGES/: AppIndicator-Support.mo  AppIndicatorExtension.po
locale/hu/LC_MESSAGES/: AppIndicator-Support.mo
locale/it/LC_MESSAGES/: AppIndicator-Support.mo  AppIndicatorExtension.po
locale/ja/LC_MESSAGES/: AppIndicator-Support.mo
locale/pt_BR/LC_MESSAGES/: AppIndicator-Support.mo  AppIndicatorExtension.po
locale/ru/LC_MESSAGES/: AppIndicator-Support.mo
locale/sr/LC_MESSAGES/: AppIndicator-Support.mo  AppIndicator-Support.po
locale/sr@latin/LC_MESSAGES/: AppIndicator-Support.mo  AppIndicator-Support.po
locale/tr/LC_MESSAGES/: AppIndicator-Support.mo  AppIndicator-Support.po
locale/zh_CN/LC_MESSAGES/: AppIndicator-Support.mo  AppIndicatorExtension.po
po/: de.po  es.po  it.po  messages.pot  pl.po  tr.po
preferences/: customIconPage.js  generalPage.js
schemas/: README  gschemas.compiled  meson.build  org.gnome.shell.extensions.appindicator-support.gschema.xml  org.gnome.shell.extensions.appindicator.gschema.xml
